Fixed #14 - show thumbnail images on mobile category pages

--- a/assets/css/css.styl
+++ b/assets/css/css.styl
@@ -521,6 +521,20 @@ a > span // Make citations appear correctly
     margin-top .5rem
 */
 
+
+// New category page styling
+
+.articles
+  display grid
+  grid-template-columns repeat(auto-fit,10rem)
+  grid-gap 1rem
+  margin-top 0
+  justify-content center
+  img 
+    margin-bottom 1rem
+    display block
+
+
 // New homepage styling
 
 #explore
