--- a/assets/css/desktop.styl
+++ b/assets/css/desktop.styl
@@ -19,6 +19,9 @@ $bold-weight = 600
     margin 0 auto
   .homescreen header h2
     width 18rem
+  // New category page styling
+  .articles
+    width 38rem
 @media screen and (min-width: 920px)
   body
     max-width 54rem
@@ -26,6 +29,9 @@ $bold-weight = 600
     width 32rem
   #indexes li
     width 25%
+  // New category page styling
+  .articles
+    width 52rem
 
 // Change page look based on width
 @media screen and (min-width: 620px)
